# MindMapHelper

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CREDITS.md  README.md
.cursor/rules/: assertions-debug-builds.mdc  async-ownership-lifetime-cpp.mdc  cast-conventions-cpp.mdc  clang-tidy-yaml.mdc  cmake-safe.mdc  const-correctness-cpp.mdc  crash-triage-discipline.mdc  cxx17-init-statement.mdc  cxx17-string-view-params.mdc  cxx17-style-tool-friendly.mdc  documentation-placement.mdc  dry-extract-helpers.mdc  imgui-test-engine-preconditions.mdc  imgui-ui.mdc  lock-ordering-no-io-under-lock.mdc  macos-build-tests.mdc  naming-conventions-cpp.mdc  platform-preprocessor-cpp.mdc  preprocessor-macros-define.mdc  production-async-future-cpp.mdc  production-exception-logging-cpp.mdc  sonar-cpp-avoid-new-issues.mdc  source-layer-boundaries-cpp.mdc  string-view-pool-remap-safety-cpp.mdc  suppressions-same-line.mdc  ui-state-write-confinement-cpp.mdc  windows-msvc-cpp.mdc
.github/workflows/: build.yml
docs/standards/: 2026-05-01_CROSS_PLATFORM_STRUCTURE_GUIDE.md  2026-05-13_CXX17_CAST_CONVENTIONS.md  CXX17_INIT_STATEMENT_EXAMPLES.md  CXX17_NAMING_CONVENTIONS.md  SONAR_CPP_RULES_REFERENCE.md
internal-docs/: 2026-05-02_mindmap-demos-to-branch-styles-plan.md  2026-05-11_file-management-plan-context.md  2026-05-13_startup-and-open-multi-format-plan.md  2026-05-15_imgui-text-styling-options.md  claude-tips.txt
scripts/: ExtractIMX.ps1  README_PRE_COMMIT.md  build_tests_linux.sh  build_tests_windows.ps1  clang-tidy-wrapper.sh  extract_imx.py  fetch_sonar_duplications.sh  fetch_sonar_results.sh  filter_clang_tidy_init_statements.py  get_sonarqube_measures.sh  pre-commit-clang-tidy.sh  run_clang_tidy.sh  run_sonar_scanner.sh  test_targets.txt
specs/: 2026-05-11_imx-import-spec.md  2026-05-12_keyboard_shortcuts_spec.md  2026-05-13_branch-edge-label-and-display-plan.md  2026-05-13_remove-default-sample-mindmap-plan.md  2026-05-14_collapse-expand-subtree-plan.md
src/: main.cpp
src/app/: AppMain.cpp  AppMain.h  DocumentSessionService.cpp  DocumentSessionService.h  HelpMindMapDocument.cpp  HelpMindMapDocument.h
src/core/: Base64.h  ByteOps.h  DocumentPathLoader.cpp  DocumentPathLoader.h  IDocumentRepository.h  IImportAdapter.h  ImportService.cpp  ImportService.h  JsonNativeDocumentRepository.cpp  JsonNativeDocumentRepository.h  MindMapDocument.h  PathExtension.h
src/core/imx/: ImxImportAdapter.cpp  ImxImportAdapter.h  ImxMindMapLoader.cpp  ImxMindMapLoader.h  ImxMindMapModel.h
src/core/mindmap/: SampleMindMapTopology.cpp  SampleMindMapTopology.h  UuidGenerator.cpp  UuidGenerator.h
src/demos/: DemoBezierMindMap.cpp  DemoBezierMindMap.h  DemoRegistry.cpp  DemoStraightMindMap.cpp  DemoTaperOrganicMindMap.cpp  DemoTaperOrganicMindMap.h  SampleMindMapGraph.h
src/platform/: PlatformBootstrap.h  PlatformBootstrapCommon.cpp
src/platform/linux/: PlatformBootstrap_linux.cpp
src/platform/macos/: PlatformBootstrap_macos.cpp
src/platform/windows/: PlatformBootstrap_windows.cpp
src/ui/: ImGuiInputHelpers.h  MindMapCanvasView.cpp  MindMapCanvasView.h  MindMapUi.cpp  MindMapUi.h  NodeEditOverlay.cpp  NodeEditOverlay.h  ShortcutRegistry.h  UiCommandDispatcher.cpp  UiCommandDispatcher.h  UiCommandId.h  UiState.h  imconfig.h
src/ui/branch/: BranchEdgeAttachments.h  BranchRenderContext.h  BranchStyle.h  DrawBranchTextOnPath.cpp  DrawBranchTextOnPath.h  DrawBranchesBezier.cpp  DrawBranchesBezier.h  DrawBranchesOrganicTaper.cpp  DrawBranchesOrganicTaper.h  DrawBranchesOrthogonal.cpp  DrawBranchesOrthogonal.h  SampleMindMapBranchAttachments.h
src/ui/canvas/: CanvasMath.h  CanvasNode.h  ClipboardImage.h  ClipboardImage_linux.cpp  ClipboardImage_macos.mm  ClipboardImage_windows.cpp  InlineMarkup.cpp  InlineMarkup.h  InlineMarkupRenderer.cpp  InlineMarkupRenderer.h  MindMapCanvasEditState.cpp  MindMapCanvasEditState.h  MindMapCanvasNodeMutators.cpp  MindMapCanvasNodeMutators.h  MindMapCanvasTreeNav.cpp  MindMapCanvasTreeNav.h  NodeExtent.h  NodeGeometry.h  NodeTextureUtils.cpp  NodeTextureUtils.h
src/ui/commands/: CollapseNodeCommand.cpp  CollapseNodeCommand.h  CommandHistory.h  DeleteNodeCommand.cpp  DeleteNodeCommand.h  ICommand.h  InsertChildNodeCommand.cpp  InsertChildNodeCommand.h  PasteImageCommand.cpp  PasteImageCommand.h  PasteTextCommand.cpp  PasteTextCommand.h  RenameNodeCommand.cpp  RenameNodeCommand.h  UpdateEdgeLabelCommand.cpp  UpdateEdgeLabelCommand.h
src/ui/demos/: DemoBezierMindMap.cpp  DemoBezierMindMap.h  DemoRegistry.cpp  DemoStraightMindMap.cpp  DemoStraightMindMap.h  DemoTaperOrganicMindMap.cpp  DemoTaperOrganicMindMap.h  IDemo.h  SampleMindMapGraph.cpp  SampleMindMapGraph.h
src/utils/: ExceptionHandling.cpp  ExceptionHandling.h  ExceptionHandling.inl  LogFormatUtils.h  Logger.h  LoggingUtils.cpp  LoggingUtils.h
tests/: Base64Test.cpp  CommandHistoryTest.cpp  DocumentPathLoaderTest.cpp  DocumentSessionServicePathTest.cpp  HelpMindMapDocumentTest.cpp  ImportServiceTest.cpp  ImxImportAdapterTest.cpp  ImxMindMapLoaderTest.cpp  JsonRoundTripTest.cpp  NodeImageExtentTest.cpp  SmokeTest.cpp  UuidGeneratorTest.cpp
